Fixed search button text visibility on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,6 @@
 .App {
   margin: 0 auto;
   max-width: 800px;
-  border: 1px lightgray solid;
 }
 
 section {
