--- a/src/DictionarySearch.css
+++ b/src/DictionarySearch.css
@@ -38,5 +38,8 @@
   .SearchSection .SearchSubmit {
     width: 70px;
     margin-left: 5px;
+    color: black;
+    padding: 0;
+    font-weight: 400;
   }
 }
